# olio-ohjelmointi

h1/: CMakeLists.txt  main.cpp
h2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/: CMakeLists.txt  car.cpp  car.h  main.cpp
h3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5/: CMakeLists.txt  classa1.h  classa2.h  classb.cpp  classb.h  main.cpp
h6a/: CMakeLists.txt  main.cpp
h6b/: exampleclass.cpp  exampleclass.h  main.cpp
